--- a/content/posts/2016-01-08-hackers.md
+++ b/content/posts/2016-01-08-hackers.md
@@ -3,6 +3,8 @@ author: "川叶"
 date: 2016-01-08
 slug: hackers in china
 title: 中国缺乏一种真正的黑客文化吗？
+categories: [随笔]
+tags: [互联网]
 isCJKLanguage: true
 ---
 
