--- a/content/posts/2015-09-07-yuxian.md
+++ b/content/posts/2015-09-07-yuxian.md
@@ -7,9 +7,14 @@ categories: [游记]
 tags: [国内游]
 isCJKLanguage: true
 ---
-一行七个朋友决定胜利日 自驾 出京，踏上一段寻古之旅。
+
+![featured](/images/yuxian/wKgBpVXs_AaAKrzQAARe7LJxH3Y10.jpg)
+
+一行七个朋友决定胜利日自驾出京，踏上一段寻古之旅。
 
 之所以选择蔚县，一开始是听闻蔚县作为燕云十六州之古蔚州，存有大量辽元时期的古建筑，认为可以来一趟人文之旅。但从第一天旅途的意外发现开始，这一趟旅途就充满了预期外的自然奇景，真切地感受到了燕赵之地“慷慨悲壮”的气息。
+
+<!--more-->
 
 # 第一天 寻古途中偶遇远古
 
