add more tag to two posts

--- a/content/posts/2017-05-28-ai-go.md
+++ b/content/posts/2017-05-28-ai-go.md
@@ -16,6 +16,8 @@ isCJKLanguage: true
 
 话音刚落，在古力和连笑分别与AlphaGo配对比赛中，古力的阿尔法“队友”要求认输，古力不肯，结果AlphaGo暴走乱落子，看似它有了情绪，引得众人发笑——臭棋果然能带来快乐，马云所言不虚。
 
+<!--more-->
+
 而19岁少年柯洁，代表当今人类围棋手的最高水平。在迎战AlphaGo的前夜，他在微博上写下这样一段话：
 
 > “……__我相信未来是属于人工智能的。可它始终都是冷冰冰的机器，与人类相比，我感觉不到它对围棋的热情和热爱。对它而言...它的热情——也只不过是运转速度过快导致CPU发热罢了。”
