--- a/content/posts/2018-07-29-pdd.md
+++ b/content/posts/2018-07-29-pdd.md
@@ -10,7 +10,7 @@ isCJKLanguage: true
 
 ![村宴](/images/pdd/fa111fb25ebe769ad18668f207d3271.jpg)
 
-# 一 五环内
+## 一 五环内
 
 有人说拼多多上市是假货和资本的合谋，对社会有害。也有人说，以商品质量批评拼多多是“五环内思维”，看不到五环外的现实需求。
 
@@ -24,7 +24,7 @@ isCJKLanguage: true
 
 但拼多多的投资价值是他们发现的。是的，正是“五环内思维”的人，他们投资了拼多多。有些舆论把批评拼多多的声音，嘲讽为”五环内思维“，是多么的不恰当。真正的五环内思维，反而看到的是拼多多的赚钱机会。
 
-# 二 五环外
+## 二 五环外
 
 中国的内需拉动不起来，这个锅房地产可以背，大家都有共识。消费升级变消费降级，不变的是赚钱的机会，就跟股市看涨看跌都无所谓，资本都能赚钱一样。
 
@@ -34,7 +34,7 @@ isCJKLanguage: true
 
 也不敢批判这样的“精致的利己主义者”，毕竟赚够了钱人家可以移民，就跟你的生活这个社会无关了。只是并不觉得这样的人是他们所标榜的“接地气”。
 
-# 三 五块钱
+## 三 五块钱
 
 好了，到这里已经说清了，批评拼多多的并不是“五环内思维”，最喜欢拼多多也未必是五环外的农村人了。
 
@@ -52,7 +52,7 @@ isCJKLanguage: true
 
 你说农村人对美好生活的追求，内容肯定跟五环内的人不一样。说得没错，但作为农村出来的人，我确信他们的美好生活，肯定不是“小米新品”和“河南松下”能带来的。
 
-# 四 小学生
+## 四 小学生
 
 我在农村做小学生的时候，好歹能自己挑一挑5块钱的商品避免踩坑。
 
