--- a/content/posts/2019-01-23-hpmw.md
+++ b/content/posts/2019-01-23-hpmw.md
@@ -10,6 +10,8 @@ isCJKLanguage: true
 
 方可成的《[百度搜索已死](https://weibo.com/ttarticle/p/show?id=2309404331600992154916)》一文引起较大反响，甚至百度公司都出来回应了。许多人表达出“天下苦秦久矣”的意思，还有人感叹为什么国内的互联网产品总是会在越来越low的路上一去不复返呢？
 
+<!--more-->
+
 我也看到一些互联网工作者表达出不屑：我们服务的主流用户的需求就是low啊，我们的用户不需要你想看的那些高大上的内容啊，我们不把产品做low就没办法服务这些用户呀，当然就顾不上你满不满意啦！
 
 其实这是一种典型的滑坡谬误。
